objects/tffa__FinancialNeedItem__c.object
<CustomObject>
    <description>Captures one specific need (question and answer) of a (potential) customer w.r.t a topic or segment (e.g. Consumer). This is part of a larger set of question and answers that constitute a financial needs analysis.</description>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>A logical identifier. References question or field code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FinancialNeed__c</fullName>
        <description>Reference to parent Financial Need</description>
        <label>Financial Need</label>
        <referenceTo>tffa__FinancialNeed__c</referenceTo>
        <relationshipLabel>Financial Need Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Label__c</fullName>
        <description>Display label.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__LongValue__c</fullName>
        <description>The full value of the answer captured in case it spans over 255 characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Long value</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Relative order w.r.t others in the list.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ValueName__c</fullName>
        <description>Display label of the value (or answer) captured. Useful when the answer is an item in a picklist. In such cases, item label is stored in this field for reference.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value (text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ValueType__c</fullName>
        <defaultValue>&quot;TEXT&quot;</defaultValue>
        <description>Type of value captured.</description>
        <label>Value type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AnswerType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Value__c</fullName>
        <description>The value (or answer) captured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Financial Need Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Need Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>